--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       loop=""
       autoplay=""
       muted=""
-      src="./assets/video/valo-bg.webm"
+      src="./assets/video/valo-bg.mp4"
     ></video>
 
     <main>
