--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
         </li>
       </ul>
 
+      <h2 class="name-person-selected invisible">Null</h2>
+
       <ul class="agents-list"></ul>
     </main>
 
