--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
       src="./assets/video/valo-bg.mp4"
     ></video>
 
+    <p class="message-all-agents-locked hidden">
+      Tous les agents sont verrouillés. Veuillez déverrouiller au moins un
+      agent.
+    </p>
+
     <main>
       <img src="./assets/img/logo.png" alt="Logo Valorant" class="logo" />
 
