--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Select the agents you want to play and get a random one from the selection."
+    />
     <title>Valoroulette</title>
     <link rel="icon" href="./assets/img/favicon.png" />
     <link rel="stylesheet" href="./css/normalize.css" />
