--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
       name="description"
       content="Select the agents you want to play and get a random one from the selection."
     />
+    <meta
+      name="google-site-verification"
+      content="PfcCLImS7s7TpHUxdNQHIea804BS_px0nfOfBcasyRM"
+    />
     <title>Valoroulette</title>
     <link rel="icon" href="./assets/img/favicon.png" />
     <link rel="stylesheet" href="./css/normalize.css" />
