--- a/index.html
+++ b/index.html
@@ -3,15 +3,57 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- SEO Meta Tags -->
     <meta
       name="description"
-      content="Select the agents you want to play and get a random one from the selection."
+      content="Valoroulette - Générez un agent Valorant aléatoire en fonction de votre sélection. Outil pratique pour les joueurs souhaitant de la variété !"
     />
+    <meta
+      name="keywords"
+      content="Valorant, Agent Roulette, Valoroulette, Random Agent, Jeu FPS"
+    />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Google Search Console Verification -->
     <meta
       name="google-site-verification"
       content="PfcCLImS7s7TpHUxdNQHIea804BS_px0nfOfBcasyRM"
     />
-    <title>Valoroulette</title>
+
+    <!-- Open Graph (Facebook, LinkedIn) -->
+    <meta
+      property="og:title"
+      content="Valoroulette - Choisissez un agent aléatoire sur Valorant"
+    />
+    <meta
+      property="og:description"
+      content="Un outil qui vous permet de sélectionner des agents Valorant et d'en obtenir un aléatoirement pour plus de fun !"
+    />
+    <meta
+      property="og:image"
+      content="https://www.ton-site.com/assets/img/preview.jpg"
+    />
+    <meta property="og:url" content="https://www.ton-site.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Valoroulette" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Valoroulette - Choisissez un agent aléatoire sur Valorant"
+    />
+    <meta
+      name="twitter:description"
+      content="Sélectionnez les agents que vous voulez jouer et obtenez-en un aléatoirement !"
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.ton-site.com/assets/img/preview.jpg"
+    />
+
+    <title>Valoroulette - Agent aléatoire pour Valorant</title>
     <link rel="icon" href="./assets/img/favicon.png" />
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/reset.css" />
@@ -19,10 +61,10 @@
   </head>
   <body>
     <video
-      playsinline=""
-      loop=""
-      autoplay=""
-      muted=""
+      playsinline
+      loop
+      autoplay
+      muted
       src="./assets/video/valo-bg.mp4"
     ></video>
 
@@ -32,28 +74,44 @@
     </p>
 
     <main>
-      <img src="./assets/img/logo.png" alt="Logo Valorant" class="logo" />
+      <img
+        src="./assets/img/logo.png"
+        alt="Logo Valoroulette - Outil de sélection d'agent Valorant"
+        class="logo"
+      />
 
       <h1>Valoroulette</h1>
 
       <ul class="btn-wrapper">
-        <li class="actions-buttons btn-select-all">select all</li>
-        <li class="actions-buttons btn-roll">roll</li>
-        <li class="actions-buttons btn-deselect-all">deselect all</li>
+        <li class="actions-buttons btn-select-all">Select All</li>
+        <li class="actions-buttons btn-roll">Roll</li>
+        <li class="actions-buttons btn-deselect-all">Deselect All</li>
       </ul>
 
       <ul class="roles-wrapper">
         <li class="btn-role duelist">
-          <img src="./assets/img/duelist.png" alt="Duelist" />
+          <img
+            src="./assets/img/duelist.png"
+            alt="Duelist - Rôle dans Valorant"
+          />
         </li>
         <li class="btn-role initiator">
-          <img src="./assets/img/initiator.png" alt="Initiator" />
+          <img
+            src="./assets/img/initiator.png"
+            alt="Initiator - Rôle dans Valorant"
+          />
         </li>
         <li class="btn-role controller">
-          <img src="./assets/img/controller.png" alt="Sentinel" />
+          <img
+            src="./assets/img/controller.png"
+            alt="Controller - Rôle dans Valorant"
+          />
         </li>
         <li class="btn-role sentinel">
-          <img src="./assets/img/sentinel.png" alt="Controller" />
+          <img
+            src="./assets/img/sentinel.png"
+            alt="Sentinel - Rôle dans Valorant"
+          />
         </li>
       </ul>
 
