--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     />
     <meta
       property="og:image"
-      content="https://valoroulette.onrender.com/assets/img/logo.png"
+      content="https://valoroulette.onrender.com/assets/img/preview.png"
     />
     <meta property="og:url" content="https://valoroulette.onrender.com" />
     <meta property="og:type" content="website" />
@@ -53,7 +53,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://valoroulette.onrender.com/assets/img/logo.png"
+      content="https://valoroulette.onrender.com/assets/img/preview.png"
     />
 
     <title>Valoroulette - Random agent for Valorant</title>
