--- a/index.html
+++ b/index.html
@@ -3,24 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    < !-- SEO Meta Tags -->
+    <!-- SEO Meta Tags -->
     <meta
       name="description"
-      content="Valoroulette - Generate a random Valorant agent based on your selection. Practical tool for players looking for variety!"
+      content="Valoroulette helps you randomly select Valorant agents for your next match. Perfect for players looking to add variety to their gameplay or practice with different agents."
     />
     <meta
       name="keywords"
       content="Valorant, Agent Roulette, Valoroulette, Random Agent, FPS Game"
     />
     <meta name="robots" content="index, follow" />
-    < !-- Canonical URL -->
+    <meta name="author" content="Nohan-V2" />
+    <meta name="theme-color" content="#FF4655" />
+    <!-- Canonical URL -->
     <link rel="canonical" href="https://valoroulette.onrender.com" />
-    < !-- Google Search Console Verification -->
+    <!-- Google Search Console Verification -->
     <meta
       name="google-site-verification"
       content="PfcCLImS7s7TpHUxdNQHIea804BS_px0nfOfBcasyRM"
     />
-    < !-- Open Graph (Facebook, LinkedIn) -->
+    <!-- Open Graph (Facebook, LinkedIn) -->
     <meta
       property="og:title"
       content="Valoroulette - Choose a random agent in Valorant"
@@ -36,7 +38,8 @@
     <meta property="og:url" content="https://valoroulette.onrender.com" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Valoroulette" />
-    < !-- Twitter Card -->
+    <meta property="og:locale" content="en_US" />
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
@@ -73,7 +76,7 @@
     <main id="main-content">
       <img
         src="./assets/img/logo.png"
-        alt="Valoroulette Logo - Valorant agent selection tool"
+        alt="Valoroulette Logo - A stylized Valorant-themed randomizer tool for agent selection"
         class="logo"
       />
       <h1>Valoroulette</h1>
@@ -93,7 +96,7 @@
         >
           <img
             src="./assets/img/duelist.png"
-            alt="Duelist - Role in Valorant"
+            alt="Duelist icon - Aggressive entry fraggers in Valorant"
           /></button
         ><button
           type="button"
@@ -102,7 +105,7 @@
         >
           <img
             src="./assets/img/initiator.png"
-            alt="Initiator - Role in Valorant"
+            alt="Initiator icon - Agents who gather information and set up team plays"
           /></button
         ><button
           type="button"
@@ -111,7 +114,7 @@
         >
           <img
             src="./assets/img/controller.png"
-            alt="Controller - Role in Valorant"
+            alt="Controller icon - Agents who control areas with smokes and zone denial"
           /></button
         ><button
           type="button"
@@ -120,7 +123,7 @@
         >
           <img
             src="./assets/img/sentinel.png"
-            alt="Sentinel - Role in Valorant"
+            alt="Sentinel icon - Defensive specialists who secure and control areas"
           />
         </button>
       </div>
