--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       rel="stylesheet"
     />
     <link rel="icon" href="./assets/img/favicon.png" />
-    <link rel="stylesheet" href="./css/main.min.css" />
+    <link rel="stylesheet" href="./css/main.min.css">
   </head>
   <body>
     <video
